# ZeConfig

./: .gitignore  README.md  README_BR.md  config.toml  how_to_use.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: release.yml  zconf-build.yml  zconf-tests.yml
config/: config.json
how_to_use/: root.env  root.json  root.yml
how_to_use/code/: code.yml  models.py  settings.py
how_to_use/configs/: config.json
how_to_use/src/: config.json  main.py
src/: __init__.py  core.py  factory.py  manager.py  models.py  settings.py  ze.py
src/models/: configmanager.py  parser_factory.py
tests/: __init__.py  conftest.py  models.py  test_config_manager.py  test_config_parser.py  test_configmanager.py  test_manager_module.py  test_model.py  test_models_module.py  test_package.py  test_parser_factory.py
ze/: .gitignore  __init__.py  pyproject.toml  requirements.txt  setup.py
ze/src/: core.py  main.py  models.py  settings.py
ze/tests/: conftest.py  test_core_module.py  test_factory_module.py  test_manager_module.py  test_models_module.py
ze/ze/: __init__.py
ze/ze/src/: __init__.py
zeconfig/: __init__.py  core.py  exc.py  models.py
