[project]
name = "zeconfig"
version = "0.1.2"
description = "Configuration Manager Package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "setuptools>=75.8.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.12",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "psutil==6.1.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.7",
    "taskipy==1.14.1",
]

[tool.ruff]
line-length = 120
extend-exclude = ['how_to_use', 'src/core.py', 'src/models.py', 'config']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
